# eos-sensor

./: Cargo.toml  README.md  cfg.toml
.cargo/: config.toml
eos-sensor-app/: Cargo.toml
eos-sensor-app/src/: lib.rs
eos-sensor-esp/: Cargo.toml  LICENSE-MIT  cfg.toml
eos-sensor-esp/.cargo/: config.toml
eos-sensor-esp/src/: main.rs  ws.rs
eos-sensor-esp/src/app/: network.rs
eos-sensor-stm/: Cargo.toml  build.rs  cfg.toml  rust-toolchain.toml
eos-sensor-stm/.cargo/: config.toml
eos-sensor-stm/src/: main.rs
platform-esp/: Cargo.toml
platform-esp/.cargo/: config.toml
platform-esp/src/: lib.rs
platform-stm/: Cargo.toml
platform-stm/src/: lib.rs
src/: main.rs  platform.rs  ws.rs
src/app/: mod.rs  network.rs
