[package]
edition = "2021"
name    = "eos-sensor"
version = "0.2.0"

[[bin]]
name = "eos-sensor"
test = false

[dependencies]

embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.23.1", features = ["defmt", "esp32", "unstable"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "utils",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
defmt = "0.3.10"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
toml-cfg = "0.2.0"
log = "0.4.25"
rand = { version = "0.9.0", default-features = false, features = ["alloc", "nightly"] }
embedded-websocket = { version = "0.9.4", default-features = false }
rand_core = "0.6.4"
esp-println = { version = "0.13.0", features = ["esp32", "defmt-espflash", "log"] }
ringbuffer = {version = "0.15.0", features = ["alloc"] }
hecate-protobuf = { git = "https://github.com/tiacsys/hecate-protobuf" }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
lsm9ds1 = { version = "0.1.0", git = "https://github.com/irockasingranite/lsm9ds1" }
fugit = "0.3.7"
anyhow = { version = "1.0.95", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
