[package]
name = "eos-sensor-app"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.10"
embassy-executor = { version = "*", features = ["nightly"] }
embassy-net = { version = "*", features = ["dhcpv4", "tcp"] }
embassy-sync = "*"
embassy-time = "*"
embedded-websocket = { version = "*", default-features = false }
hecate-protobuf = { git = "https://github.com/tiacsys/hecate-protobuf" }
log = { version = "*", optional = true }
platform-esp = { path = "../platform-esp", optional = true }
platform-stm = { path = "../platform-stm", optional = true }
rand = { version = "*", default-features = false, features = ["alloc", "nightly"] }
ringbuffer = "*"
static_cell = { version = "*", features = ["nightly"] }

[features]
platform-esp = ["dep:platform-esp", "dep:log"]
platform-stm = ["dep:platform-stm", "embassy-net/defmt"]
# default = ["platform-esp"] # for debugging
