[package]
name = "eos-sensor-esp"
version = "0.1.0"
authors = ["Sarah Renkhoff <sarah.renkhoff@navimatix.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = ["esp32", "embassy", "embassy-time-timg0", "async", "embassy-executor-thread", "embedded-hal-02"] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.5.0", features = ["esp32", "phy-enable-usb", "utils", "wifi", "smoltcp", "embassy-net"] }
embassy-time = { version = "0.3.0", features = ["generic-queue"] }
embassy-sync = "0.5.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-net = { version = "0.4.0", features = ["dhcpv4", "tcp"] }
embedded-websocket = { version = "0.9.3", default-features = false}
rand = { version = "0.8.5", default-features = false }
toml-cfg = "0.2.0"
esp-alloc = { version = "0.3.0" }
lsm9ds1 = "0.1.0"
fugit = "0.3.7"
hecate-protobuf = { git = "https://github.com/tiacsys/hecate-protobuf" }
ringbuffer = "0.15.0"
platform-esp = { path = "../platform-esp" }
eos-sensor-app = { path = "../eos-sensor-app", features = ["platform-esp"]}
defmt = "0.3.8"

[patch.crates-io]
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
