[package]
edition = "2021"
name = "eos-sensor-stm"
version = "0.1.0"
authors = ["Sarah Renkhoff <sarah.renkhoff@navimatix.de>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "unstable-pac", "memory-x", "time-driver-any"] }
embedded-alloc = "0.5.1"

static_cell = { version = "2.1.0", features = ["nightly"] }
lsm9ds1 = "0.1.0"

platform-stm = { path = "../platform-stm" }
eos-sensor-app = { path = "../eos-sensor-app", features = ["platform-stm"]}
toml-cfg = "0.2.0"

[features]
default = ["embassy-stm32/stm32f767zi"] # for debugging

[patch.crates-io]
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
