[package]
name = "platform-esp"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.17.0", features = ["async", "embassy", "embassy-time-timg0", "embedded-hal-02", "esp32"] }
esp-wifi = { version = "0.5.1", features = ["embassy-net", "esp32", "wifi"] }
lsm9ds1 = "0.1.0"

rand_core = { version = "0.6.4", optional = true }
embassy-net-driver = { version = "0.2.0", optional = true }

[patch.crates-io]
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

[features]
type-checks = ["dep:rand_core", "dep:embassy-net-driver"]
