[package]
name = "platform-esp"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32"] }
esp-hal-embassy = { version = "0.6.0", feature = ["esp32", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
esp-wifi = { version = "*", features = ["esp32", "wifi"] }

rand_core = { version = "0.6.4", optional = true }
embassy-net-driver = { version = "0.2.0", optional = true }

lsm9ds1 = { path = "../lsm9ds1" }

[features]
type-checks = ["dep:rand_core", "dep:embassy-net-driver"]
