[package]
name = "platform-stm"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-net-driver = { version =  "0.2.0", optional = true }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "unstable-pac", "memory-x", "time-driver-any" ] }
lsm9ds1 = "0.1.0"
rand_core = { version = "0.6.4", optional = true }

[features]
type-checks = ["dep:embassy-net-driver", "dep:rand_core"]

[patch.crates-io]
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
